--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ copy.src.on.open=false
 copy.src.target=
 index.file=index.php
 run.as=LOCAL
-url=http://localhost/cours_programmation\\cours_programmation_v0_0_1
+url=http://localhost/cours_programmation/cours_programmation_v0_1_0/
